# socket-normal-detector

./: .gitignore  .gitmodules  Dockerfile  build.sh  start.sh
models/: plug.STEP  plug.pcd  plug_100.pcd  plug_10000.pcd  plug_100000.pcd  plug_15000.pcd  plug_25000.pcd  plug_50000.pcd  socket.STEP  stl_to_pcd.py
models/plugs_pcd/: plug_10000.pcd  plug_100000.pcd  plug_15000.pcd  plug_25000.pcd  plug_50000.pcd
models/raw_plug/: stl_to_pcd.py
my_code/: CMakeLists.txt  rs-pcl.cpp
open3d_test_py/: cfg.json  realsense_helper.py  realsense_recorder.py  requirments.txt  simple.py  t.ipynb  view.txt
rec_code/: CMakeCache.txt  Makefile  cmake_install.cmake  correspondence_grouping
rec_code/correspondence/: correspondence_grouping.cpp
rec_code/del_nan/: CMakeLists.txt  del_nan  del_nan.cpp
rec_code/icp/: CMakeLists.txt  interactive_icp.cpp
